control-plane/custom-gateway-api/examples/standard/http-routing/bar-httproute.yaml
#$ Used in:
#$ - site-src/guides/http-routing.md
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "bar.example.com"
  rules:
  - matches:
    - headers:
      - type: Exact
        name: env
        value: canary
    backendRefs:
    - name: bar-svc-canary
      port: 8080
  - backendRefs:
    - name: bar-svc
      port: 8080
